--- a/1-FrontMatter/abstract-pt.tex
+++ b/1-FrontMatter/abstract-pt.tex
@@ -8,4 +8,10 @@
 
 \typeout{NT FILE abstract-pt.tex}%
 
-Por fazer...
+A revisão de código é uma etapa crítica no ciclo de desenvolvimento de software, garantindo qualidade, consistência e conformidade com boas práticas. Em ambientes empresariais complexos, caracterizados por bases de código heterogéneas, múltiplas tecnologias e elevado volume de alterações, o processo manual de revisão torna-se dispendioso, sujeito a inconsistências e limitado pela experiência dos revisores.
+
+O advento de modelos de linguagem de grande escala (\glspl{LLM}) apresenta oportunidades para automatizar parte deste processo, proporcionando comentários contextualizados e reduzindo tarefas repetitivas. No entanto, a utilização prática de \glspl{LLM} em contextos empresariais específicos enfrenta desafios, incluindo falta de conhecimento sobre padrões internos, variabilidade na qualidade dos comentários, falsos positivos e integração nos fluxos de trabalho existentes.
+
+Esta dissertação propõe o desenvolvimento de um sistema de apoio à revisão de código na Processware, baseado em \glspl{LLM}, capaz de analisar alterações de código automaticamente, gerar comentários alinhados com boas práticas internas e integrar-se de forma fluida nos fluxos de desenvolvimento. A solução é modular, contemplando componentes para extração e pré-processamento de alterações, orquestração da análise, motor de \glspl{LLM}, validação de comentários, base de conhecimento organizacional e publicação de resultados. Este sistema pretende aumentar a eficiência, consistência e qualidade das revisões, reduzindo o esforço manual e promovendo a uniformização de práticas internas.
+
+Palavras-chave: revisão de código, inteligência artificial, modelos de linguagem de grande escala, automação, boas práticas internas.
